fix scrollbar appearing/disappearing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,29 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* fix for scroll bar appearing/disappearing when opening pages */
+html {
+  overflow-y: scroll; /* always show/reserve scrollbar gutter */
+}
+/* Chrome/Edge/Safari */
+::-webkit-scrollbar {
+  width: 12px;              /* keep gutter */
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: transparent;
+}
+/* Firefox */
+html {
+  scrollbar-width: none; /* hides it entirely (no visible bar) */
+}
+
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
